==> wujq2020/flashavt/HARDWARE/ADC/adc.c <==
#include "adc.h"
#include "delay.h"
//////////////////////////////////////////////////////////////////////////////////	 
//ADC 供电电压采集							  
////////////////////////////////////////////////////////////////////////////////// 	

ADC_HandleTypeDef ADC1_Handler;//ADC句柄
ADC_HandleTypeDef ADC3_Handler;//ADC句柄
//初始化ADC
//ch: ADC_channels 
//通道值 0~16取值范围为：ADC_CHANNEL_0~ADC_CHANNEL_16
void ADC1_Init(void)
{ 
    ADC1_Handler.Instance=ADC1;
    ADC1_Handler.Init.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4; 	//4分频，ADCCLK=PER_CK/4=64/4=16MHZ
    ADC1_Handler.Init.Resolution=ADC_RESOLUTION_16B;           	//16位模式
    ADC1_Handler.Init.ScanConvMode=DISABLE;                    	//非扫描模式
    ADC1_Handler.Init.EOCSelection=ADC_EOC_SINGLE_CONV;       	//关闭EOC中断
	  ADC1_Handler.Init.LowPowerAutoWait=DISABLE;									//自动低功耗关闭				
    ADC1_Handler.Init.ContinuousConvMode=DISABLE;               //关闭连续转换
    ADC1_Handler.Init.NbrOfConversion=1;                        //1个转换在规则序列中 也就是只转换规则序列1 
    ADC1_Handler.Init.DiscontinuousConvMode=DISABLE;            //禁止不连续采样模式
    ADC1_Handler.Init.NbrOfDiscConversion=0;                    //不连续采样通道数为0
    ADC1_Handler.Init.ExternalTrigConv=ADC_SOFTWARE_START;      //软件触发
    ADC1_Handler.Init.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE;//使用软件触发
	  ADC1_Handler.Init.BoostMode=ENABLE;							            //BOOT模式关闭
	  ADC1_Handler.Init.Overrun=ADC_OVR_DATA_OVERWRITTEN;			    //有新的数据的死后直接覆盖掉旧数据
	  ADC1_Handler.Init.OversamplingMode=DISABLE;					        //过采样关闭
	  ADC1_Handler.Init.ConversionDataManagement=ADC_CONVERSIONDATA_DR;  //规则通道的数据仅仅保存在DR寄存器里面
    HAL_ADC_Init(&ADC1_Handler);                                 //初始化 
	
	  HAL_ADCEx_Calibration_Start(&ADC1_Handler,ADC_CALIB_OFFSET,ADC_SINGLE_ENDED); //ADC校准
}

void ADC3_Init(void)
{ 
    ADC3_Handler.Instance=ADC3;
    ADC3_Handler.Init.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4; 	//4分频，ADCCLK=PER_CK/4=64/4=16MHZ
    ADC3_Handler.Init.Resolution=ADC_RESOLUTION_16B;           	//16位模式
    ADC3_Handler.Init.ScanConvMode=DISABLE;                    	//非扫描模式
    ADC3_Handler.Init.EOCSelection=ADC_EOC_SINGLE_CONV;       	//关闭EOC中断
	  ADC3_Handler.Init.LowPowerAutoWait=DISABLE;									//自动低功耗关闭				
    ADC3_Handler.Init.ContinuousConvMode=DISABLE;               //关闭连续转换
    ADC3_Handler.Init.NbrOfConversion=1;                        //1个转换在规则序列中 也就是只转换规则序列1 
    ADC3_Handler.Init.DiscontinuousConvMode=DISABLE;            //禁止不连续采样模式
    ADC3_Handler.Init.NbrOfDiscConversion=0;                    //不连续采样通道数为0
    ADC3_Handler.Init.ExternalTrigConv=ADC_SOFTWARE_START;      //软件触发
    ADC3_Handler.Init.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE;//使用软件触发
	  ADC3_Handler.Init.BoostMode=ENABLE;							            //BOOT模式关闭
	  ADC3_Handler.Init.Overrun=ADC_OVR_DATA_OVERWRITTEN;			    //有新的数据的死后直接覆盖掉旧数据
	  ADC3_Handler.Init.OversamplingMode=DISABLE;					        //过采样关闭
	  ADC3_Handler.Init.ConversionDataManagement=ADC_CONVERSIONDATA_DR;  //规则通道的数据仅仅保存在DR寄存器里面
    HAL_ADC_Init(&ADC3_Handler);                                 //初始化 
	
	  HAL_ADCEx_Calibration_Start(&ADC3_Handler,ADC_CALIB_OFFSET,ADC_SINGLE_ENDED); //ADC校准
}

//ADC底层驱动，引脚配置，时钟使能
//此函数会被HAL_ADC_Init()调用
//hadc:ADC句柄
void HAL_ADC_MspInit(ADC_HandleTypeDef* hadc)
{
    GPIO_InitTypeDef GPIO_Initure;
	
    __HAL_RCC_ADC12_CLK_ENABLE();           //使能ADC1/2时钟
    __HAL_RCC_ADC3_CLK_ENABLE();            //使能ADC3时钟	
	  __HAL_RCC_GPIOA_CLK_ENABLE();			      //开启GPIOC时钟
    __HAL_RCC_GPIOC_CLK_ENABLE();			      //开启GPIOC时钟
	  __HAL_RCC_ADC_CONFIG(RCC_ADCCLKSOURCE_CLKP); //ADC外设时钟选择	
	  
	  //V_FLASH_AD-PC4-ADC12_PIN4
    GPIO_Initure.Pin=GPIO_PIN_4;            
    GPIO_Initure.Mode=GPIO_MODE_ANALOG;     
    GPIO_Initure.Pull=GPIO_NOPULL;          
    HAL_GPIO_Init(GPIOC,&GPIO_Initure);	
	
	 //V_CS_AD-PA4-ADC12_PIN18
    GPIO_Initure.Pin=GPIO_PIN_4;            
    GPIO_Initure.Mode=GPIO_MODE_ANALOG;     
    GPIO_Initure.Pull=GPIO_NOPULL;          
    HAL_GPIO_Init(GPIOA,&GPIO_Initure);	
	
	 //V_MCU_AD-PA3-ADC12_PIN15
    GPIO_Initure.Pin=GPIO_PIN_3;            
    GPIO_Initure.Mode=GPIO_MODE_ANALOG;     
    GPIO_Initure.Pull=GPIO_NOPULL;          
    HAL_GPIO_Init(GPIOA,&GPIO_Initure);	
		
		//V_GND_AD-PA2-ADC12_PIN14
    GPIO_Initure.Pin=GPIO_PIN_2;            
    GPIO_Initure.Mode=GPIO_MODE_ANALOG;     
    GPIO_Initure.Pull=GPIO_NOPULL;          
    HAL_GPIO_Init(GPIOA,&GPIO_Initure);
}

//获得ADC值
//ch: 通道值 0~16，取值范围为：ADC_CHANNEL_0~ADC_CHANNEL_16
//返回值:转换结果
u16 Get_Adc1(u32 ch)   
{
    ADC_ChannelConfTypeDef ADC1_ChanConf;
    
    ADC1_ChanConf.Channel=ch;                                 //通道
    ADC1_ChanConf.Rank=ADC_REGULAR_RANK_1;                  	//1个序列
    ADC1_ChanConf.SamplingTime=ADC_SAMPLETIME_64CYCLES_5;     //采样时间       
		ADC1_ChanConf.SingleDiff=ADC_SINGLE_ENDED;  				      //单边采集          		
		ADC1_ChanConf.OffsetNumber=ADC_OFFSET_NONE;             	
		ADC1_ChanConf.Offset=0;   
    HAL_ADC_ConfigChannel(&ADC1_Handler,&ADC1_ChanConf);      //通道配置

    HAL_ADC_Start(&ADC1_Handler);                             //开启ADC
	
    HAL_ADC_PollForConversion(&ADC1_Handler,10);              //轮询转换
	return (u16)HAL_ADC_GetValue(&ADC1_Handler);	              //返回最近一次ADC1规则组的转换结果
}

u16 Get_Adc3(u32 ch)   
{
    ADC_ChannelConfTypeDef ADC3_ChanConf;
    
    ADC3_ChanConf.Channel=ch;                                 //通道
    ADC3_ChanConf.Rank=ADC_REGULAR_RANK_1;                  	//1个序列
    ADC3_ChanConf.SamplingTime=ADC_SAMPLETIME_64CYCLES_5;     //采样时间       
		ADC3_ChanConf.SingleDiff=ADC_SINGLE_ENDED;  				      //单边采集          		
		ADC3_ChanConf.OffsetNumber=ADC_OFFSET_NONE;             	
		ADC3_ChanConf.Offset=0;   
    HAL_ADC_ConfigChannel(&ADC3_Handler,&ADC3_ChanConf);      //通道配置

    HAL_ADC_Start(&ADC3_Handler);                             //开启ADC
	
    HAL_ADC_PollForConversion(&ADC3_Handler,10);              //轮询转换
	return (u16)HAL_ADC_GetValue(&ADC3_Handler);	              //返回最近一次ADC3规则组的转换结果
}

//获取指定通道的转换值，取times次,然后平均 
//times:获取次数
//返回值:通道ch的times次转换结果平均值
u16 Get_Adc1_Average(u32 ch,u8 times)
{
	u32 temp_val=0;
	u8 t;
	for(t=0;t<times;t++)
	{
		temp_val+=Get_Adc1(ch);
		delay_ms(5);
	}
	return temp_val/times;
} 

u16 Get_Adc3_Average(u32 ch,u8 times)
{
	u32 temp_val=0;
	u8 t;
	for(t=0;t<times;t++)
	{
		temp_val+=Get_Adc3(ch);
		delay_ms(5);
	}
	return temp_val/times;
} 

u16  Get_Power_Voltage(void)
{
    u16 PowerVol; 						      //供电电压
	  u16 VrefintData;    						//实际内参
	  u16 ADCxData;      						  //供电电压端口采样值
			
		ADC3_Init();        						//内参采样
		VrefintData = Get_Adc3_Average(ADC_CHANNEL_VREFINT,20);		
		ADC1_Init();        						//测试点采样
	  ADCxData=Get_Adc1_Average(ADC_CHANNEL_4,20);
	  HAL_ADC_DeInit(&ADC1_Handler);  //关闭ADC
		HAL_ADC_DeInit(&ADC3_Handler);	
	
	  PowerVol =  ((ADCxData * VREFINT_CAL) >> 15)*3300/VrefintData;    //(3.3 * VREFINT_CAL * ADCx_DATA)/(VREFINT_DATA * FULL_SCALE)    * 2
	  return PowerVol;
}

u16  Get_Flash_Voltage(void)
{
    u16 PowerVol; 						      //供电电压
	  u16 ADCxData;      						  //供电电压端口采样值
					
		ADC1_Init();        						//测试点采样
	  ADCxData=Get_Adc1_Average(ADC_CHANNEL_4,20);
	  HAL_ADC_DeInit(&ADC1_Handler);  //关闭ADC

		PowerVol =  ADCxData*VREF*2/65536;   
		return PowerVol;
}

u16  Get_CS_Voltage(void)
{
    u16 PowerVol; 						      //供电电压
	  u16 ADCxData;      						  //供电电压端口采样值
					
		ADC1_Init();        						//测试点采样
	  ADCxData=Get_Adc1_Average(ADC_CHANNEL_18,20);
	  HAL_ADC_DeInit(&ADC1_Handler);  //关闭ADC

		PowerVol =  ADCxData*VREF/65536;   
		return PowerVol;
}

u16  Get_MCU_Voltage(void)
{
    u16 PowerVol; 						      //供电电压
	  u16 ADCxData;      						  //供电电压端口采样值
					
		ADC1_Init();        						//测试点采样
	  ADCxData=Get_Adc1_Average(ADC_CHANNEL_15,20);
	  HAL_ADC_DeInit(&ADC1_Handler);  //关闭ADC

		PowerVol =  ADCxData*VREF*2/65536;   
		return PowerVol;
}

u16  Get_GND_Voltage(void)
{
    u16 PowerVol; 						      //供电电压
	  u16 ADCxData;      						  //供电电压端口采样值
					
		ADC1_Init();        						//测试点采样
	  ADCxData=Get_Adc1_Average(ADC_CHANNEL_14,20);
	  HAL_ADC_DeInit(&ADC1_Handler);  //关闭ADC

		PowerVol =  ADCxData*VREF/65536;   
		return PowerVol;
}
